--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "backend",
+  "name": "zippie-eats-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for ZippieEats",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "react-scripts build",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "express": "^5.2.1",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
-    "express": "^5.2.1",
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0"
   }
